# awc

./: .dockerignore  .gitignore  .swcrc  Cargo.toml  Dockerfile  README.md  awc.dev.json  awc.prod.json  build.rs  fly.toml  package-lock.json  package.json  tailwind.config.js  webpack.config.js
.cargo/: README.md  config
.xtask/: Cargo.toml  README.md
awc-cli/: Cargo.toml  README.md  main.rs
awc-cli/src/: lib.rs  lint.rs  main.rs
awc-lib/: Cargo.toml  README.md
awc-lib/src/: compiler.rs  diagnostic.rs  lib.rs  rules.rs
awc-web/: .swcrc  Cargo.toml  README.md  awc.dev.json  awc.prod.json
awc-web/src/browser/: index.ts  template.html
awc-web/src/browser/bucket/: README.md
awc-web/src/server/: main.rs
awc-web/src/server/public/: index.html
crates/: test.graphql
crates/awc-cli/: README.md  main.rs
crates/awc-lib/: Cargo.toml  README.md
crates/awc-lib/src/: lib.rs
crates/awc-server/: Cargo.toml  README.md  awc.dev.json  awc.prod.json  build.rs
crates/awc-server/src/: main.rs
crates/awc-server/ui/: index.ts  template.html
crates/awc-server/ui/schemas/: dev.graphql
examples/: cli.rs
public/: index.css  index.html  index.js  index.js.map
saucer/: Cargo.toml  README.md
saucer/src/: fs.rs  lib.rs  log.rs  logger.rs  prelude.rs  process.rs  timer.rs
saucer/src/command/: mod.rs  parallel.rs  stage.rs
saucer/src/saucer/: mod.rs  parallel.rs
schemas/: cat.graphql  dev.graphql  prod.graphql
src/: awc.rs  cli.rs  lib.rs  main.rs
src/ui/: index.html  index.ts  template.html
src/ui/schemas/: dev.graphql  prod.graphql
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/src/framework/: fs.rs  log.rs  mod.rs  prelude.rs  process.rs  timer.rs
xtask/src/framework/command/: mod.rs  stage.rs  step.rs
xtask/src/web/: mod.rs
xtask/src/web/bundle/: all.rs  bucket.rs  css.rs  deps.rs  js.rs  mod.rs
xtask/src/web/bundle/html/: config.rs  mod.rs
