[package]
name = "awc-cli"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
awc = { path = "../awc-lib" }
clap = { version = "3", features = ["std", "derive"] }
env_logger = "0.9"
notify = "4"
log = "0.4"
saucer = { path = "../saucer" }

[[bin]]
name = "awc-cli"
path = "./src/main.rs"
