[package]
name = "awc"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "awc"

[dependencies]
apollo-compiler = { git = "https://github.com/apollographql/apollo-rs", rev = "e8bdaa900b9b0559ff91508d5b65c83ddc33375e" }
buildstructor = "0.3"
miette = "4.7.1"
tracing = "0.1"
saucer = { path = "../saucer" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"