[package]
name = "awc-web"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "awc-web"
path = "./src/server/main.rs"

[dependencies]
anyhow = "1"
awc = { path = "../awc-lib" }
axum = "0.5"
cansi = "2"
serde_json = "1"
hyper = "0.14"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
