[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xtask"
path = "./src/main.rs"

[dependencies]
anyhow = "1"
buildstructor = "0.3"
camino = { version = "1", features = ["serde1"] }
clap = { version = "3", features = ["std", "derive", "env"] }
handlebars = "4"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
