[package]
name = "awc-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "awc-server"
path = "./src/main.rs"

[dependencies]
anyhow = "1"
async-std = { version = "1.6.0", features = ["attributes"] }
awc = { path = "../awc-lib" }
tide = { version = "0.17.0-beta.1" }

[build-dependencies]
anyhow = "1"
handlebars = "4"
camino = { version = "1", features = ["serde1"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"